--- a/setup.cfg
+++ b/setup.cfg
@@ -22,9 +22,15 @@ license_files =
 python_requires = >= 3.8
 packages = find:
 zip_safe = False
+# include_package_data = True
 install_requires =
     x7-geom
     x7-lib
+
+[options.package_data]
+* =
+    *.png
+    *.svg
 
 [options.packages.find]
 exclude =
